# gs-plugin-vanilla-meta

./: .clang-format  Makefile  README.md  gs-plugin-vanilla-meta.c  gs-plugin-vanilla-meta.h  gs-vanilla-meta-util.c  gs-vanilla-meta-util.h  meson.build
debian/: changelog  control  copyright  libgs-plugin-vanilla-meta.install
